--- a/src/app/features/reserved-area/consumer/coupon-showcase/coupon-showcase.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-showcase/coupon-showcase.component.html
@@ -8,12 +8,12 @@
           <p class="card-text">{{coupon.description}}</p>
         </div>
         <div  class="card-footer">
-          <button [disabled] = "inCart(coupon)" type="button" class="btn btn-success float-right ml-1" (click)="openModal(template, coupon)">Add to cart</button>
+          <button [disabled] = "inCart(coupon.id)" type="button" class="btn btn-success float-right ml-1" (click)="openModal(template, coupon)">Add to cart</button>
           <button type="button" class="btn btn-info text-white float-right" (click)="details(coupon)">Details</button>
         </div>
 
         <div class="coupon-price">{{formatPrice(coupon.price)}}</div>
-        <div class="coupon-cart" *ngIf="inCart(coupon)" (click)="viewCart()">
+        <div class="coupon-cart cursor-pointer" *ngIf="inCart(coupon.id)" (click)="viewCart()">
           <i class="fas fa-cart-arrow-down" ></i>
         </div>
 
@@ -52,7 +52,7 @@
 
           <div class="modal-footer">
             <button type="button" class="btn btn-danger" (click)="decline()">Cancel</button>
-            <button [disabled] = "inCart(coupon.id)" type="button" class="btn btn-success" (click)="addToCart(coupon)">Add</button>
+            <button [disabled]="inCart(coupon.id)" type="button" class="btn btn-success" (click)="addToCart(coupon)">Add</button>
           </div>
         </ng-template>
         <!--<button style="color: #53993b; font-size: 15px;" *ngIf="inCart(coupon.id)" (click)="viewCart()" > in the cart-->
