--- a/src/app/features/reserved-area/producer/coupon-create/coupon-create.component.html
+++ b/src/app/features/reserved-area/producer/coupon-create/coupon-create.component.html
@@ -12,7 +12,7 @@
             <div class="form-group row">
               <label class="col-lg-2 col-sm-4 col-form-label">Title</label>
               <div class="col-lg-10 col-sm-8">
-                <!--<input value="{{couponPass.title}}" type="text" formControlName="title" class="form-control"-->
+                <!--<input value="{{couponPass.title}}" type="text" formControlName="title" class="form-loadCart"-->
 
                 <input type="text" formControlName="title" class="form-control"
                        [ngClass]="{ 'is-invalid': submitted && f.title.errors }"/>
@@ -125,7 +125,7 @@
             <div class="form-group row">
               <label class="col-sm-4 col-lg-2 col-form-label">Valid until</label>
               <div  class="col-sm-4 col-lg-8">
-                <!--<ng2-flatpickr  #datepicker style="background: transparent;"  [config]="exampleOptions" formControlName="valid_until" class="form-control"-->
+                <!--<ng2-flatpickr  #datepicker style="background: transparent;"  [config]="exampleOptions" formControlName="valid_until" class="form-loadCart"-->
                 <!--[ngClass]="{ 'is-invalid': submitted && f.valid_until.errors?.MatchDateFromUntil }"></ng2-flatpickr>-->
                 <!--<div *ngIf="submitted && f.valid_until.errors?.MatchDateFromUntil" class="invalid-feedback">-->
                 <!--<div *ngIf="f.valid_until.errors?.MatchDateFromUntil">Date or time is incorrect</div>-->
