--- a/src/app/features/reserved-area/consumer/coupon-token/coupon-token.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-token/coupon-token.component.html
@@ -11,7 +11,7 @@
             <div class="form-group row">
               <label class="col-lg-4 col-sm-4 col-form-label">Insert token</label>
               <div class="col-lg-4 col-sm-4">
-                <!--<input value="{{couponPass.title}}" type="text" formControlName="title" class="form-control"-->
+                <!--<input value="{{couponPass.title}}" type="text" formControlName="title" class="form-loadCart"-->
 
                 <input type="text" formControlName="token" class="form-control"
                        [ngClass]="{ 'is-invalid': submitted && f.token.errors }"/>
