--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -2,7 +2,20 @@
 
 <!-- If user is not logged in-->
 <nav class="navbar navbar-expand-md navbar-light bg-white fixed-top">
-  <a class="navbar-brand" href="#"><img src="assets/img/brand/sardcoin-logo.png" width="180" /></a>
+  <button type="button" id="sidebarCollapse" class="navbar-toggler" (click)="showSideBar()">
+     <span class="navbar-toggler-icon"></span>
+  </button>
+
+
+
+
+  <a class="navbar-brand" href="#">
+    <picture>
+      <source media="(min-width: 720px)" srcset="assets/img/brand/sardcoin-logo.png">
+      <source media="(min-width: 480px)" srcset="assets/img/brand/sardcoin-logo-small.png">
+      <img src="assets/img/brand/sardcoin-logo-small.png" alt="noImage">
+    </picture>
+  </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
           aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
