--- a/src/app/features/reserved-area/consumer/checkout/checkout.component.html
+++ b/src/app/features/reserved-area/consumer/checkout/checkout.component.html
@@ -45,8 +45,8 @@
             <p><b>Paypal account: </b>{{user.email_paypal}}</p>
           </div>
 
-          <button class="col-sm-5 btn btn-danger" (click)="retry()">Back to cart</button>
-          <button class="col-sm-5 offset-sm-2 btn btn-success" (click)="openModal(template)">Buy</button>
+          <button class="btn btn-lg btn-success float-right ml-2" (click)="openModal(template)">Confirm and pay</button>
+          <button class="btn btn-lg btn-primary float-right" (click)="retry()">Go back to cart</button>
         </div>
 
       </div>
