--- a/src/app/features/reserved-area/consumer/coupon-details/coupon-details.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-details/coupon-details.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-8 offset-md-2">
       <div class="card mx-4" style="padding: 5px">
-        <img class="card-img-top crop centered-and-cropped" src="{{imageURL}}" alt="Card image cap">
+        <img class="card-img-top crop centered-and-cropped" src="{{imageURL + couponPass.image}}" alt="Card image cap">
         <div class="card-body p-4">
           <h3 class="card-title">{{couponPass.title}}</h3>
           <div class="coupon-price">{{formatPrice(couponPass.price)}}</div>
@@ -45,60 +45,55 @@
           </div>
           <br/>
 
-          <button class="col-sm-5 btn btn-danger" (click)="retry()">Back to shopping</button>
+          <button class="col-sm-5 btn btn-danger" (click)="retry()">Go back to shopping</button>
           <button *ngIf="!inCart(couponPass.id) && couponPass.max_quantity > 0" class="col-sm-5 offset-sm-2 btn btn-success"
                   [disabled]="couponPass.max_quantity === 0 || couponPass.quantity === 0" (click)="openModal(template)">Add to cart
           </button>
           <button *ngIf="inCart(couponPass.id)" class="col-sm-5 offset-sm-2 btn btn-success" (click)="viewCart()">Go to cart</button>
-
-          <ng-template #template>
-
-            <div class="modal-header">
-              <h4 class="text-info modal-title pull-left">Add to shopping cart</h4>
-              <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-
-            <div class="modal-body">
-              <form [formGroup]="myForm">
-                <label style="color: #999999;" class="col-sm-12"> You are adding <label class="text-info">
-                  {{couponPass.title}}</label> to cart. </label>
-
-                <div class="form-group col-sm-12">
-                  <label style="color: #999999;" class="col-sm-7">Choose the quantity: <label class="text-info">
-                    ({{couponPass.max_quantity}} available)</label></label>
-                  <input formControlName="quantity"
-                         class="col-sm-2 small inline-button-input"
-                         type="number" min="1" max="{{couponPass.max_quantity}}"/>
-                  <button class="col-sm-1 button-add-del small inline-button-input  "
-                          [disabled]="myForm.value.quantity === 1" style="color: red; margin:0.5%;" (click)="del()">-
-                  </button>
-                  <button class="col-sm-1 button-add-del small inline-button-input" [disabled]="isMax"
-                          style="color: green; margin:0.5%;" (click)="add()">+
-                  </button>
-
-                  <div>
-                    <div style="color: #bd0a0d;
-                            text-align: center" *ngIf="f.quantity.errors">Insert a valid quantity!
-                    </div>
-                  </div>
-                </div>
-              </form>
-
-
-            </div>
-
-            <div class="modal-footer">
-              <button type="button" class="btn btn-danger" (click)="closeModal()">Cancel</button>
-              <button type="button" class="btn btn-success" (click)="addToCart(couponPass)">Add</button>
-            </div>
-          </ng-template>
         </div>
 
       </div>
-
-
     </div>
   </div>
 </div>
+
+<ng-template #template>
+
+  <div class="modal-header">
+    <h4 class="text-info modal-title pull-left">Add to shopping cart</h4>
+    <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+
+  <div class="modal-body">
+    <form [formGroup]="myForm">
+      <label style="color: #999999;" class="col-sm-12"> You are adding <label class="text-info">
+        {{couponPass.title}}</label> to cart. </label>
+
+      <div class="form-group col-sm-12">
+        <label style="color: #999999;" class="col-sm-7">Choose the quantity: <label class="text-info">
+          ({{couponPass.max_quantity}} available)</label></label>
+        <input formControlName="quantity"
+               class="col-sm-2 small inline-button-input"
+               type="number" min="1" max="{{couponPass.max_quantity}}"/>
+        <button class="col-sm-1 button-add-del small inline-button-input  "
+                [disabled]="myForm.value.quantity === 1" style="color: red; margin:0.5%;" (click)="del()">-
+        </button>
+        <button class="col-sm-1 button-add-del small inline-button-input" [disabled]="isMax"
+                style="color: green; margin:0.5%;" (click)="add()">+
+        </button>
+
+        <div>
+          <div style="color: #bd0a0d;
+                            text-align: center" *ngIf="f.quantity.errors">Insert a valid quantity!</div>
+        </div>
+      </div>
+    </form>
+  </div>
+
+  <div class="modal-footer">
+    <!--<button type="button" class="btn btn-danger" (click)="closeModal()">Cancel</button>-->
+    <button type="button" class="btn btn-success" (click)="addToCart()">Add</button>
+  </div>
+</ng-template>
